Add custom controls and configurations   * Labels in dialect   * Show current/remaining time instead of total time   * Jump back 1 sec on the timeline when toogle play   * Keyboard shortcuts

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -11,13 +11,10 @@
   <body>
 
     <div class="container">
-      <div class="form-group">
-        <div id="waveform"></div>
-      </div>
       <div class="form-group controls">
         <div>
-          <button class="btn btn-lg btn-secondary" id="buttonPlay" onclick="app.toogle()"><i class="icon-play"></i></button>
-          <button class="btn btn-lg btn-secondary" id="buttonPause" onclick="app.toogle()"><i class="icon-pause"></i></button>
+          <button class="btn btn-lg btn-secondary" id="buttonPlay" onclick="app.toggle()"><i class="icon-play"></i></button>
+          <button class="btn btn-lg btn-secondary" id="buttonPause" onclick="app.toggle()"><i class="icon-pause"></i></button>
           <div class="btn-group" role="group">
             <button class="btn btn-sm btn-secondary" id="buttonSlower" onclick="app.setPlaybackRate(-0.05)"><i class="icon-turtle"></i></button>
             <button class="btn btn-sm btn-secondary" id="buttonFaster" onclick="app.setPlaybackRate(0.05)"><i class="icon-rabbit"></i></button>
@@ -25,14 +22,18 @@
           <button class="btn btn-sm btn-secondary" id="buttonMute" onclick="app.mute(false)"><i class="icon-volume-mute"></i></button>
           <button class="btn btn-sm btn-secondary" id="buttonUnmute" onclick="app.mute(true)"><i class="icon-volume-high"></i></button>
         </div>
-        <div id="duration"></div>
       </div>
       <div class="form-group">
-        <textarea class="form-control" id="userInput" rows="1" placeholder="Was habe ich gesagt?" autocomplete="off" autocorrect="off" spellcheck="false" autofocus></textarea>
+        <div id="waveform"></div>
+        <div id="current"></div>
+        <div id="remaining"></div>
+      </div>
+      <div class="form-group has-feedback">
+        <textarea class="form-control" id="user-input" rows="1" placeholder="Was hani gseit? Bitte schreibe das Gehörte so auf, wie es ausgesprochen wurde." autocomplete="off" autocorrect="off" spellcheck="false"></textarea>
       </div>
       <div class="form-group">
         <div class="btn-group float-right" role="group">
-          <button class="btn btn-lg btn-primary" onclick="app.next()">Weiter</button>
+          <button class="btn btn-lg btn-primary" id="btn-continue" onclick="app.next()">Witer</button>
         </div>
       </div>
     </div>
